[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://bg/placeholder.png" type="Texture" id=2]
[ext_resource path="res://images.jpg" type="Texture" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://ai/TestAIv2.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/PlaceholderCharacter.tscn" type="PackedScene" id=6]
[ext_resource path="res://puyo_aqua.png" type="Texture" id=7]
[ext_resource path="res://fonts/SourceCodePro-Semibold.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="images2" type="Sprite" parent="."]
visible = false
scale = Vector2( 2.6, 2.6 )
texture = ExtResource( 3 )
centered = false

[node name="Player2" parent="." instance=ExtResource( 4 )]
pause_mode = 1
margin_left = 1264.0
margin_top = 150.0
margin_right = 1764.0
margin_bottom = 1000.0
is_cpu = true
player = 2
puyo_type_order = [ 0, 0, 3, 1, 0, 4, 0, 3, 2, 4, 0, 1, 3, 2, 0, 4 ]

[node name="ai" parent="Player2" instance=ExtResource( 5 )]

[node name="Character" parent="Player2" instance=ExtResource( 6 )]
position = Vector2( -1264, -150 )

[node name="Player1" parent="." instance=ExtResource( 4 )]
pause_mode = 1
margin_left = 256.0
margin_top = 150.0
margin_right = 756.0
margin_bottom = 1000.0
is_cpu = true
puyo_type_order = [ 0, 0, 1, 0, 0, 4, 0, 0, 2, 0, 3, 0, 0, 4, 0, 0 ]
starting_zone_meter = 7

[node name="Character" parent="Player1" instance=ExtResource( 6 )]

[node name="ai" parent="Player1" instance=ExtResource( 5 )]

[node name="puyo_beta" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )
centered = false

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 560.0
margin_top = 800.0
margin_right = 1360.0
margin_bottom = 1000.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]O-O"
text = "O-O"

